{
    "name": "ControllerSampleInputActions",
    "maps": [
        {
            "name": "RightController",
            "id": "0d83ca55-7ddb-4dc8-a1b8-b667fb447ea3",
            "actions": [
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "a40102d7-3f0a-47cb-9fe7-9c10882984e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grip",
                    "type": "Button",
                    "id": "0dfd212d-78dc-47a1-8076-e1bbc99cf1e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AX",
                    "type": "Button",
                    "id": "9192d49a-08f2-4086-aa31-c8230a65be5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BY",
                    "type": "Button",
                    "id": "1be3ff26-46c8-4299-b7a6-26a015689012",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickClick",
                    "type": "Button",
                    "id": "2414c9f0-e4ea-437e-94a1-3a0be22a56ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "App",
                    "type": "Button",
                    "id": "c5ced84e-b4d9-4190-89f0-408c5a93a933",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69bb2a1a-94c9-4323-ad9d-ec657812e9de",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4540ab38-57a0-4c0e-ba6b-f7aa30ec821d",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a334860b-4314-42e4-9770-71967f743acb",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d2fdbb-70a4-4baf-98d6-8270b0acad06",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99ee062a-e63a-40c2-91a4-7351838505b3",
                    "path": "<XRController>{RightHand}/primary2DAxisClick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8980c5de-9c7a-4ba0-84e0-4a126cec0c3f",
                    "path": "<XRController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "App",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LeftController",
            "id": "722cc55d-eb5d-46bb-a018-e7301750dc57",
            "actions": [
                {
                    "name": "App",
                    "type": "Button",
                    "id": "a03b2790-280e-4768-b30a-a9b9f9899b2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickClick",
                    "type": "Button",
                    "id": "ce5b5d4e-9094-4d2c-b9f9-53b13f10fbce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BY",
                    "type": "Button",
                    "id": "22b17e08-2dbc-46dc-8fd8-ff6b5c967c62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AX",
                    "type": "Button",
                    "id": "5676308a-6cfd-478c-9430-c6bdd0ba0c75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grip",
                    "type": "Button",
                    "id": "9272183f-8416-4f2a-bc4b-bca4608b4cdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "20968439-2ee3-428a-bc43-a256654774b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b345fe39-d349-4f4e-89a3-31029b6c8383",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d13f8b92-a9c9-49cd-8f80-2baecc6d6e71",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69964ebd-d78e-4525-aa5e-34755f5ee1b3",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50d6b296-7faf-48e5-952b-57e28c3658f8",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67eaceaf-16ce-40f6-af33-ee2d19868d2a",
                    "path": "<XRController>{LeftHand}/primary2DAxisClick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e449a72-85e1-4a80-a9ae-bac6e99e29f0",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "App",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}